apps/salesforce-app/force-app/main/default/objects/ChatMessage__c/ChatMessage__c.object-meta.xml
<CustomObject>
    <label>Chat Message</label>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>