apps/salesforce-app/force-app/main/default/objects/ChatMessage__c/fields/Chat_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Chat_Conversation__c</fullName>
    <label>Chat Conversation</label>
    <referenceTo>ChatConversation__c</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>Chat_Conversation_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>