apps/salesforce-app/force-app/main/default/objects/ChatMessage__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>