apps/salesforce-app/force-app/main/default/objects/ChatMessage__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <label>Sent At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>